Fixed the spacing used in the title bar when the calendar is in DatePicker mode.

--- a/src/calendarjs.scss
+++ b/src/calendarjs.scss
@@ -100,6 +100,12 @@ div.calendar-date-picker {
         display: block;
     }
 
+    div.header-date {
+        div.title-container {
+            font-size: $large-font-size !important;
+        }
+    }
+
     div.calendar {
         font-size: $small-font-size !important;
         position: absolute;
